Animated Alert Dialog

--- a/app/src/main/res/layout/fragment_book_catalogue.xml
+++ b/app/src/main/res/layout/fragment_book_catalogue.xml
@@ -28,16 +28,23 @@
         android:gravity="center"
         android:textSize="16sp"
         android:padding="16dp" />
-    <Button
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnRetry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Retry"
         android:visibility="gone"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
-        android:layout_below="@id/tvNoBooks"/>
-
+        android:layout_below="@id/tvNoBooks"
+        android:textColor="@android:color/white"
+        android:backgroundTint="#736ff5"
+        android:text="Retry"
+        app:icon="@drawable/ic_retry"
+        app:iconSize="25dp"
+        app:iconTint="@android:color/white"
+        app:iconGravity="textStart"
+        app:iconPadding="8dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewBooks"
