--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,6 +50,16 @@
         app:iconTint="@android:color/white"
         app:iconPadding="8dp" />
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottieSuccess"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        app:lottie_autoPlay="false"
+        android:visibility="gone"
+        app:lottie_loop="false"
+        app:lottie_rawRes="@raw/anim_success" />
+
     <TextView
         android:id="@+id/tvRegister"
         android:layout_width="wrap_content"
