--- a/app/src/main/res/layout/fragment_staff_cloud_books_catalogue.xml
+++ b/app/src/main/res/layout/fragment_staff_cloud_books_catalogue.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="16dp"
     tools:context=".StaffBooksCataloguePopulateFragment">
 
@@ -16,7 +17,6 @@
         android:layout_height="48dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_margin="8dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:src="@drawable/ic_arrow_back"
         android:contentDescription="@string/back_button" />
@@ -38,7 +38,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Select a book genre and populate the library with  books from ."
+            android:text="Select a book genre and populate the library."
             android:gravity="center"
             android:textSize="13sp"
             android:textColor="@android:color/darker_gray"
@@ -116,14 +116,19 @@
                 android:src="@drawable/ic_dropdown_arrow" />
 
         </RelativeLayout>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnFetchBooks"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Fetch Books"/>
-
-
+            android:textColor="@android:color/white"
+            android:backgroundTint="#736ff5"
+            android:text="Fetch Books"
+            app:icon="@drawable/ic_download"
+            app:iconSize="25dp"
+            app:iconTint="@android:color/white"
+            app:iconGravity="textStart"
+            app:iconPadding="8dp" />
 
 
     </LinearLayout>
